{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 148,
  "lineage": "208776cb-08f2-ee29-6393-633179f9010b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:639720217790:instance/i-00ce054b10e77fd5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ce054b10e77fd5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Jenkins-pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04eb537539354a800",
            "private_dns": "ip-192-168-4-95.ec2.internal",
            "private_ip": "192.168.4.95",
            "public_dns": "ec2-18-206-227-146.compute-1.amazonaws.com",
            "public_ip": "18.206.227.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0778fd3e4f7070acc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0060de95c0f50c4d1",
            "tags": {
              "Name": "Dev-cvayutopia-ec2instance"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-ec2instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd51bc6602d8d438"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:internet-gateway/igw-0d6e5a74b131272f2",
            "id": "igw-0d6e5a74b131272f2",
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-vpc-igw"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-vpc-igw"
            },
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:route-table/rtb-0c8d53ba6f7104c63",
            "id": "rtb-0c8d53ba6f7104c63",
            "owner_id": "639720217790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6e5a74b131272f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-cvayutopia-publicRouteTable"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d76b4fba64c1e96f",
            "route_table_id": "rtb-0c8d53ba6f7104c63",
            "subnet_id": "subnet-0060de95c0f50c4d1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-RT",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb2b386c96c13cc4",
            "route_table_id": "rtb-0c8d53ba6f7104c63",
            "subnet_id": "subnet-0bf704af88652c24f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-RT",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:security-group/sg-05a301e7bddb66885",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05a301e7bddb66885",
            "ingress": [],
            "name": "Dev-cvayutopia-sg",
            "name_prefix": "",
            "owner_id": "639720217790",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "103.217.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2283048175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a301e7bddb66885",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "103.217.0.0/16"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3736308931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a301e7bddb66885",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "103.217.0.0/16"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-2517063886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a301e7bddb66885",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "103.217.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-929647516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a301e7bddb66885",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:subnet/subnet-01e3be1f5ad746811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-01e3be1f5ad746811",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-privatesubnet-1"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-privatesubnet-1"
            },
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:subnet/subnet-0432aeb601b3709c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-0432aeb601b3709c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-privatesubnet-2"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-privatesubnet-2"
            },
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:subnet/subnet-0060de95c0f50c4d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0060de95c0f50c4d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-vpc-publicsubnet-1"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-vpc-publicsubnet-1"
            },
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:subnet/subnet-0bf704af88652c24f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0bf704af88652c24f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-vpc-publicsubnet-2"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-vpc-publicsubnet-2"
            },
            "vpc_id": "vpc-04651f93ddfdfe00a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639720217790:vpc/vpc-04651f93ddfdfe00a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f85ed274b2c90413",
            "default_route_table_id": "rtb-021cc74f0d14cada7",
            "default_security_group_id": "sg-0fd51bc6602d8d438",
            "dhcp_options_id": "dopt-07df48e9fab222aeb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04651f93ddfdfe00a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021cc74f0d14cada7",
            "owner_id": "639720217790",
            "tags": {
              "Name": "Dev-cvayutopia-vpc"
            },
            "tags_all": {
              "Name": "Dev-cvayutopia-vpc"
            }
          }
        }
      ]
    }
  ]
}